--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,47 @@
+alabaster==0.7.12
 asgiref==3.3.1
+autopep8==1.5.5
+Babel==2.9.0
 certifi==2020.12.5
 chardet==4.0.0
+coreapi==2.3.3
+coreschema==0.0.4
 dj-database-url==0.5.0
 Django==3.1.5
 django-cors-headers==3.7.0
 django-heroku==0.3.1
 djangorestframework==3.12.2
+djangorestframework-simplejwt==4.6.0
+docutils==0.16
 gunicorn==20.0.4
 idna==2.10
+imagesize==1.2.0
+itypes==1.2.0
+Jinja2==2.11.3
+MarkupSafe==1.1.1
+openapi-codec==1.3.2
+packaging==20.9
 psycopg2==2.8.6
 psycopg2-binary==2.8.6
+pycodestyle==2.6.0
+Pygments==2.8.0
+PyJWT==2.0.1
+pyparsing==2.4.7
 python-decouple==3.4
 pytz==2020.5
 requests==2.25.1
+simplejson==3.17.2
 six==1.15.0
+snowballstemmer==2.1.0
+Sphinx==3.5.1
+sphinxcontrib-applehelp==1.0.2
+sphinxcontrib-devhelp==1.0.2
+sphinxcontrib-htmlhelp==1.0.3
+sphinxcontrib-jsmath==1.0.1
+sphinxcontrib-qthelp==1.0.3
+sphinxcontrib-serializinghtml==1.1.4
 sqlparse==0.4.1
+toml==0.10.2
+uritemplate==3.0.1
 urllib3==1.26.3
 whitenoise==5.2.0
