--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,12 @@
-
 asgiref==3.3.1
 certifi==2020.12.5
 chardet==4.0.0
 dj-database-url==0.5.0
 Django==3.1.5
 django-cors-headers==3.7.0
+django-des==2.4.1
 django-heroku==0.3.1
+django-solo==1.1.3
 djangorestframework==3.12.2
 gunicorn==20.0.4
 idna==2.10
